[package]
name = "god-hjul"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
# bevy = { version = "0.17.3", features = ["bevy_light"] }
bevy_hanabi = "0.17.0"
rand = "0.9.2"

[dependencies.bevy]
version = "0.17.3"
features = [
	"android-game-activity",
	"android_shared_stdcxx",
	"animation",
	"async_executor",
	"bevy_animation",
	"bevy_anti_alias",
	"bevy_asset",
	"bevy_audio",
	# "bevy_camera",
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gilrs",
	"bevy_gizmos",
	"bevy_gltf",
	"bevy_image",
	"bevy_input_focus",
	# "bevy_light",
	"bevy_log",
	"bevy_mesh",
	"bevy_mesh_picking_backend",
	"bevy_pbr",
	"bevy_picking",
	"bevy_post_process",
	"bevy_render",
	"bevy_scene",
	# "bevy_shader",
	"bevy_sprite",
	"bevy_sprite_picking_backend",
	"bevy_sprite_render",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_ui_picking_backend",
	"bevy_ui_render",
	"bevy_window",
	"bevy_winit",
	"custom_cursor",
	"debug",
	"default_font",
	"hdr",
	"ktx2",
	"multi_threaded",
	"png",
	"reflect_auto_register",
	"smaa_luts",
	"std",
	"sysinfo_plugin",
	"tonemapping_luts",
	"vorbis",
	"wayland",
	"webgl2",
	"x11",
	"zstd_rust"
]
